# AutoDiffEKF

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  example.cpp
cmake/: FindCatch2.cmake  FindEigen3.cmake  Findautodiff.cmake  Findmatplotlibcpp17.cmake  Findpybind11.cmake
filtering/: CMakeLists.txt  EKF.h  KF.h
math/: CMakeLists.txt  EigenTypes.h
plotting/: CMakeLists.txt  PyPlot.h
